More work on the WS client library and samples